implemented the rangefinder senor, not tested yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(robot_model)
 
+set(CMAKE_BUILD_TYPE Debug) 
+
 include_directories(include)
 
 FIND_PACKAGE(OpenCV  REQUIRED)
@@ -9,13 +11,15 @@ INCLUDE_DIRECTORIES(/usr/include/eigen3)
 
 set(SOURCES 
     src/main.cpp
-    src/robot.cpp)
+    src/robot.cpp
+    src/rangefinder.cpp)
 
 set(HEADERS 
-    include/robot.hpp)
+    include/robot.hpp
+    include/rangefinder.hpp)
 
-#add_executable(robot_model ${SOURCES} ${HEADERS})
-#target_link_libraries(robot_model ${OpenCV_LIBS})
-
-add_library(robot_model SHARED ${SOURCES} ${HEADERS})
+add_executable(robot_model ${SOURCES} ${HEADERS})
 target_link_libraries(robot_model ${OpenCV_LIBS})
+
+# add_library(robot_model SHARED ${SOURCES} ${HEADERS})
+# target_link_libraries(robot_model ${OpenCV_LIBS})
