--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ set(HEADERS
     include/robot.hpp
     include/rangefinder.hpp)
 
-add_executable(robot_model ${SOURCES} ${HEADERS})
-target_link_libraries(robot_model ${OpenCV_LIBS})
-
-# add_library(robot_model SHARED ${SOURCES} ${HEADERS})
+# add_executable(robot_model ${SOURCES} ${HEADERS})
 # target_link_libraries(robot_model ${OpenCV_LIBS})
+
+add_library(robot_model SHARED ${SOURCES} ${HEADERS})
+target_link_libraries(robot_model ${OpenCV_LIBS})
